--- a/WebAirport/WebAirport.csproj
+++ b/WebAirport/WebAirport.csproj
@@ -213,6 +213,7 @@
     <Content Include="Views\Ticket\SelectedFlight.cshtml" />
     <Content Include="Views\Ticket\ListTicket.cshtml" />
     <Content Include="Views\Ticket\ListTickets.cshtml" />
+    <Content Include="Views\Home\Ticket.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
