--- a/WebAirport/WebAirport.csproj
+++ b/WebAirport/WebAirport.csproj
@@ -214,6 +214,7 @@
     <Content Include="Views\Ticket\ListTicket.cshtml" />
     <Content Include="Views\Ticket\ListTickets.cshtml" />
     <Content Include="Views\Home\Ticket.cshtml" />
+    <Content Include="Views\Position\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
