modified view`s from "List" with Position, Airplane, Staff, TypeAirplane. End create DbInit

--- a/WebAirport/WebAirport.csproj
+++ b/WebAirport/WebAirport.csproj
@@ -53,6 +53,12 @@
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -154,6 +160,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -185,21 +192,13 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Position.cshtml" />
     <Content Include="Views\Position\Create.cshtml" />
-    <Content Include="Views\Position\ListPosition.cshtml" />
     <Content Include="Views\Position\Edit.cshtml" />
     <Content Include="Views\Staff\Create.cshtml" />
-    <Content Include="Views\Staff\ListStaff.cshtml" />
     <Content Include="Views\Staff\Edit.cshtml" />
-    <Content Include="Views\Home\Staff.cshtml" />
     <Content Include="Views\TypeAirplane\Create.cshtml" />
-    <Content Include="Views\TypeAirplane\ListTypeAirplane.cshtml" />
     <Content Include="Views\TypeAirplane\Edit.cshtml" />
     <Content Include="Views\Airplane\Create.cshtml" />
-    <Content Include="Views\Home\TypeAirplane.cshtml" />
-    <Content Include="Views\Home\Airplane.cshtml" />
-    <Content Include="Views\Airplane\ListAirplane.cshtml" />
     <Content Include="Views\Airplane\Edit.cshtml" />
     <Content Include="Views\Flight\Create.cshtml" />
     <Content Include="Views\Flight\ListAirplaneByType.cshtml" />
@@ -215,6 +214,11 @@
     <Content Include="Views\Ticket\ListTickets.cshtml" />
     <Content Include="Views\Home\Ticket.cshtml" />
     <Content Include="Views\Position\Delete.cshtml" />
+    <Content Include="Views\Position\Index.cshtml" />
+    <Content Include="Views\Staff\Index.cshtml" />
+    <Content Include="Views\TypeAirplane\Index.cshtml" />
+    <Content Include="Views\Airplane\Index.cshtml" />
+    <Content Include="Views\Ticket\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
