--- a/WebAirport/WebAirport.csproj
+++ b/WebAirport/WebAirport.csproj
@@ -201,11 +201,7 @@
     <Content Include="Views\Airplane\Create.cshtml" />
     <Content Include="Views\Airplane\Edit.cshtml" />
     <Content Include="Views\Flight\Create.cshtml" />
-    <Content Include="Views\Flight\ListAirplaneByType.cshtml" />
     <Content Include="Views\Flight\Edit.cshtml" />
-    <Content Include="Views\Flight\ListTypeSelected.cshtml" />
-    <Content Include="Views\Flight\ListAirplaneSelected.cshtml" />
-    <Content Include="Views\Flight\ListStaffSelected.cshtml" />
     <Content Include="Views\Ticket\Create.cshtml" />
     <Content Include="Views\Ticket\SelectedFlight.cshtml" />
     <Content Include="Views\Position\Delete.cshtml" />
@@ -215,6 +211,7 @@
     <Content Include="Views\Airplane\Index.cshtml" />
     <Content Include="Views\Ticket\Index.cshtml" />
     <Content Include="Views\Flight\Index.cshtml" />
+    <Content Include="Views\Flight\getAirplaneType.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
